# bon

./: .editorconfig  .gitignore  Cargo.toml  README.md
docs/: commands.md  libs.md
src/: main.rs
src/bon_lib/: mod.rs  voyage.rs
src/bon_lib/config/: add.rs  edit.rs  init.rs  mod.rs
src/bon_lib/template/: add.rs  delete.rs  edit.rs  gen.rs  mod.rs  update.rs
src/bon_lib/utils/: funcs.rs  mod.rs  path.rs  structure.rs
