[package]
name = "bon"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
home-dir = "0.1.0"
inquire = { version = "0.6.2", features = ["date"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.106"
